# daamath

./: .gitignore  404.html  contributing.md  formal specification.md  index.html  namespace prospect.txt  note to myself.txt  pyproject.toml  readme.md  sitemap.xml  thing.py  zensical.toml
.github/workflows/: docs.yaml  docs.yml
c/: test.c
c/src/: a.out  makefile  test  test.c
docs/: index.md  voting.md
docs/implementations/: index.md
docs/specification/: constants.md  datatypes.md  domains.md  domains.yaml  enums.md  errors.md  files.md  generate signatures.py  index.md  indicators.yaml  namespace.md  namespace.yaml  new datatypes perhaps.md  orders.md  strings.yaml  unicode.md
docs/stylesheets/: extra.css
docs_overrides/: main.html
documentation/: mkdocs.yml  zensical.toml
documentation/docs/: .nav.yml  index.md
documentation/overrides/: main.html
documentation/site/: 404.html  index.html
functions/: index.html
functions/arithmetic/: index.html
functions/hyperoperation/: index.html
functions/interval/: index.html
functions/logic/: index.html
functions/quantize/: index.html
functions/trigonometry/: index.html
implementations/: index.html
implementations/c/: index.html  notes.txt  types.txt
implementations/python/: .gitignore  build.py  explanation.txt  generate  generate.py  generate_src  index.html  pyproject.toml
implementations/python/generators/: generate constants  generate constants.py  generate context.py  generate functions.py  generate signatures.py  generate strings.py  generate symbols.py  generate unicode.py  quirk_fixer
implementations/python/generators/constants/: generate __init__.py  generate float.py
implementations/python/handwritten/daamath/: __init__.py  context.py  domains.py  exceptions.py  indicators.py  python_utils.py  structs.py
implementations/python/handwritten/daamath/constants/: cayley_dickson.py
implementations/python/handwritten/daamath/functions/: __init__.py  hyperoperations.py  mapping.py  miscellaneous.py
implementations/python/handwritten/daamath/graphs/: __init__.py  complex.py  hyperoperations.py  old_functions.py  tensor.py
implementations/python/handwritten/daamath/mappings/: hyperoperations.py  solvers.py  trigonometry.py
implementations/python/handwritten/daamath/numbers/: __init__.py  constants.py  derived.py  floating.py
implementations/python/handwritten/daamath/sets/: __init__.py  naturals.py
implementations/python/install/: index.html
implementations/python/src/daamath/: __init__.py  context.py  domains.py  enums.py  exceptions.py  generate_strings.py  hydrators.py  indicators.py  python_utils.py  signatures.py  strings  utils.py
implementations/python/src/daamath/constants/: __init__.py  angle.py  constants.py  derived.py  float.py  irrationals.py  misc.py  miscellaneous.py
implementations/python/src/daamath/context/: signatures.py
implementations/python/src/daamath/functions/: __init__.py  arithmetic.py  arithmetic_extra.py  boolean.py  combinatoric.py  hyperoperations.py  interval.py  logic.py  mapping.py  miscellaneous.py  order.py  quantization.py  trigonometric.py  trigonometry.py  trigonometry_extra.py  variadic.py
implementations/python/src/daamath/mappings/: arithmetic.py  hyperoperations.py  sigmoids.py
implementations/python/src/daamath/numbers/: conversion_angle.py
implementations/python/src/daamath/strings/: __init__.py  arrow.py  ascii.py  bracket.py  digit.py  fraction.py  greek.py  latin.py  shapes.py  square.py
implementations/python/src/daamath/strings/utilities/: lookup.py
implementations/python/src/daamath/symbols/: __init__.py  arrow.py
implementations/python/src/daamath/unicode/: __init__.py  bracket.py  miscellaneous.py  square.py
implementations/python/tests/: test_fact.py  test_sumt.py
install/: index.html
install/C/: index.html
install/python/: index.html
java/swissmath/: SwissMath.java
numbers/: index.html
old/: aliases.py  angle.yaml  classes.py  constants.yaml  enums.py  generate context.py  generate float.py  generate functions.py  generate signatures.py  hyperoperations.py  old mkdocs.yml  pyproject_old.toml  readme.md  strings.yaml  types.py  utils.py
old docs/: voting.md
old docs/specification/: context struct.yaml  context.md  daamath.yaml  generate context struct.py  namespace.yaml  sequences.md
old/strings_old/: digit.py  greek.py  latin.py
python/: pyproject.toml
python/tests/: test_comparative.py  test_componentwise_comparative.py  test_fact.py  test_trig.py
search/: search_index.json
specification/: context.yaml  index.html
specification/constants/: index.html
specification/context/: index.html
specification/datatypes/: index.html
specification/domains/: index.html
specification/enums/: index.html
specification/errors/: index.html
specification/exceptions/: index.html
specification/flags/: index.html
strings/: index.html
stylesheets/: extra.css
(+249 files in other folders)
