[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "daamath"
version = "0.2.0"
#dynamic = ["version"]
description = "a mathematician's spellbook: language-agnostic math library specification with implementations in various languages "
readme = "readme.md"
requires-python = ">=3.11.0"
license = "GPL-3.0-or-later"
#package-dir = {"" = "."}
#dependencies = ["numpy", "matplotlib"]
authors = [
	{ name="deftasparagusanaconda", email="deftasparagusanaconda@gmail.com" }
]

[project.urls]
Homepage = "https://deftasparagusanaconda.github.io/daamath"
Documentation = "https://deftasparagusanaconda.github.io/daamath"
Repository = "https://github.com/deftasparagusanaconda/daamath"
Issues = "https://github.com/deftasparagusanaconda/daamath/issues"
#Changelog = "https://github.com/me/spam/blob/master/changelog.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["implementations/python/src"]
