# old --------------------------------------------------------------------------
#
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
#
# [project]
# name = "daamath"
# version = "0.2.0"
# description = "a mathematician's spellbook"
#
# [tool.hatch.build.targets.wheel]
# packages = ["src/daamath/"]
# 
# ------------------------------------------------------------------------------

# man... most of this is AI generated, with lots of hand-correction
# i just cant be bothered about this
# its not something i want to waste my time on

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daamath"
version = "0.3.0"
description = "a mathematician's spellbook"
readme = "readme.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"

authors = [
    { name = "deftasparagusanaconda" }
]

keywords = [
    "math",
    "numerical",
    "algebra",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",   
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"   
]

# daamath must have zero dependencies. thats one beauty of it.
dependencies = []

[project.urls]
Homepage = "https://github.com/deftasparagusanaconda/daamath"
Documentation = "https://deftasparagusanaconda.github.io/daamath/"
Repository = "https://github.com/deftasparagusanaconda/daamath"
Issues = "https://github.com/deftasparagusanaconda/daamath/issues"

[tool.hatch.build.targets.wheel]
packages = ["implementations/python/src/daamath"]
