[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "daamath"
version = "0.2.0"
#dynamic = ["version"]
description = "a mathematician's spellbook: language-agnostic math library specification with implementations in various languages "
readme = "README.md"
requires-python = ">=3.11.0"
license = "GPL-3.0-or-later"
#package-dir = {"" = "."}
#dependencies = ["numpy", "matplotlib"]
authors = [
	{ name="deftasparagusanaconda", email="deftasparagusanaconda@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/deftasparagusanaconda/daamath"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
